--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#aaaaaa</color>
+    <color name="green">#3ef735</color>
+    <color name="yellow">#f7f435</color>
+    <color name="red">#f73535</color>
 </resources>
